--- a/index.html
+++ b/index.html
@@ -1204,12 +1204,12 @@
         
         <div class="api-keys-container">
             <div class="api-key-input">
-                <label for="visionKey">Vision Model API Key</label>
+                <label for="visionKey">Google Vision Pro 1.5 Model API Key</label>
                 <input type="password" id="visionKey" placeholder="Enter Vision API Key">
                 <button class="toggle-visibility" onclick="toggleVisibility('visionKey')">👁️</button>
             </div>
             <div class="api-key-input">
-                <label for="llmKey">LLM Model API Key</label>
+                <label for="llmKey">Cohere Command-R-Plus LLM Model API Key</label>
                 <input type="password" id="llmKey" placeholder="Enter LLM API Key">
                 <button class="toggle-visibility" onclick="toggleVisibility('llmKey')">👁️</button>
             </div>
